--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <section>
         <!--navbar-->
-        <nav class=" flex flex-col sm:flex-row bg-white justify-between items-center gap-3 sm:w-full mx-auto sm:h-[110px]">
+        <!-- <nav class=" flex flex-col sm:flex-row bg-white justify-between items-center gap-3 sm:w-full mx-auto sm:h-[110px]">
             <div class=" flex ml-[60px]">
                 <img src="./assets/logo.png" class=" sm:mt-2 w-[50px] h-[50px]" alt="">
                 <h1 class="font-extrabold text-xl text-[#006747] ml-3">Emergency<br> Service</h1>
@@ -35,18 +35,256 @@
                     <button class=" flex gap-3 w-[123px] h-[52px] justify-center items-center bg-[#00a63e] text-white text-[16px] font-inter font-bold rounded-[50px]">2 Copy</button>
                 </div>
             </div>
-        </nav>
+        </nav> -->
+
+    <!--navbar-->
+    <nav class="flex flex-col sm:flex-row justify-between items-center gap-4 sm:gap-0 w-full bg-white p-4 sm:p-0">
+        <!-- Logo -->
+        <div class="flex items-center ml-0 sm:ml-[60px] mb-4 sm:mb-0">
+            <img src="./assets/logo.png" class="w-[50px] h-[50px] sm:w-[60px] sm:h-[60px]" alt="">
+            <h1 class="font-extrabold text-xl sm:text-2xl text-[#006747] ml-3 leading-tight">
+                Emergency<br>Service
+            </h1>
+        </div>
+
+        <!-- Buttons -->
+        <div class="flex flex-col sm:flex-row gap-3 sm:gap-5 mr-0 sm:mr-[60px]">
+            <button class="flex gap-2 sm:gap-3 w-[123px] h-[52px] justify-center items-center bg-[#41ff6b1a] rounded-full font-bold text-[16px]">
+                0 <img src="./assets/heart.png" class="w-[25px] h-[25px] sm:w-[30px] sm:h-[30px]" alt="">
+            </button>
+            <button class="flex gap-2 sm:gap-3 w-[123px] h-[52px] justify-center items-center bg-[#41ff6b1a] rounded-full font-bold text-[16px]">
+                100 <img src="./assets/coin.png" class="w-[25px] h-[25px] sm:w-[30px] sm:h-[30px]" alt="">
+            </button>
+            <button class="flex gap-2 sm:gap-3 w-[123px] h-[52px] justify-center items-center bg-[#00a63e] text-white rounded-full font-bold text-[16px]">
+                2 Copy
+            </button>
+        </div>
+    </nav>
+
+
     </section>
 
     <!--bannar section-->
-    <div class="sm:w-full sm:flex-col h-[239px] bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] text-center p-2">
+    <!-- <div class="sm:w-full sm:flex-col h-[239px] bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] text-center p-2">
         <img src="./assets/logo-dark.png" class="w-[92px] h-[92px] mx-auto mt-[20px]" alt="">
         <h1 class="lg:text-[40px] md:text-xl sm:text-2xl font-bold text-white">Emergency Service Directory</h1>
         <p class="text-xl sm:text-lg sm:w-full text-white">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
-    </div>
+    </div> -->
+    <div class="w-full bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] text-center py-6 sm:py-4">
+    <img src="./assets/logo-dark.png" class="w-20 h-20 sm:w-16 sm:h-16 mx-auto mt-2" alt="">
+    <h1 class="text-3xl md:text-4xl lg:text-5xl font-bold text-white mt-3">Emergency Service Directory</h1>
+    <p class="text-base sm:text-sm md:text-lg lg:text-xl text-white mt-2 mx-4 sm:mx-2 md:mx-8">
+        Government Emergency Services at Your Fingertip – A Project by Government of the People’s Republic of Bangladesh
+    </p>
+</div>
+
 
     <!--card section-->
-    <div class="parent_div flex flex-col lg:flex-row gap-6 px-4 sm:px-8 lg:px-16  justify-between bg-[#f5fff6] md:w-full h-full ">
+    <section class="bg-[#f5fff6] px-4 sm:px-8 lg:px-16 py-10">
+  <div class="flex flex-col lg:flex-row gap-6">
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 px-4 sm:px-6 lg:px-0">
+
+  <!-- Card 1 -->
+  <div class="border-2 border-gray-200 bg-white p-6 rounded-xl shadow-sm flex flex-col">
+    <div class="flex justify-between items-center">
+      <div class="w-14 h-14 sm:w-16 sm:h-16 bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
+        <img src="./assets/emergency.png" class="w-8 h-8 sm:w-10 sm:h-10" alt="">
+      </div>
+      <i class="fa-regular fa-heart"></i>
+    </div>
+    <h1 class="font-bold text-xl sm:text-2xl mt-4">National Emergency Number</h1>
+    <p class="text-[#5c5c5c] text-sm sm:text-base">National Emergency</p>
+    <h1 class="text-2xl sm:text-3xl font-bold mt-4 mb-2">999</h1>
+    <button class="bg-[#f2f2f2] w-14 h-9 rounded-3xl text-xs mt-2">All</button>
+    <div class="flex gap-3 mt-4">
+      <button class="flex-1 border-2 border-gray-300 rounded-lg h-10 text-[#5c5c5c] flex items-center justify-center gap-2">
+        <i class="fa-regular fa-copy"></i> Copy
+      </button>
+      <button class="flex-1 border-2 border-gray-300 rounded-lg h-10 bg-[#00a63e] text-white flex items-center justify-center gap-2">
+        <i class="fa-solid fa-phone"></i> Call
+      </button>
+    </div>
+  </div>
+
+  <!-- Card 2 -->
+  <div class="border-2 border-gray-200 bg-white p-6 rounded-xl shadow-sm flex flex-col">
+    <div class="flex justify-between items-center">
+      <div class="w-14 h-14 sm:w-16 sm:h-16 bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
+        <img src="./assets/police.png" class="w-8 h-8 sm:w-10 sm:h-10" alt="">
+      </div>
+      <i class="fa-regular fa-heart"></i>
+    </div>
+    <h1 class="font-bold text-xl sm:text-2xl mt-4">Police Helpline Number</h1>
+    <p class="text-[#5c5c5c] text-sm sm:text-base">Police</p>
+    <h1 class="text-2xl sm:text-3xl font-bold mt-4 mb-2">999</h1>
+    <button class="bg-[#f2f2f2] w-14 h-9 rounded-3xl text-xs mt-2">Police</button>
+    <div class="flex gap-3 mt-4">
+      <button class="flex-1 border-2 border-gray-300 rounded-lg h-10 text-[#5c5c5c] flex items-center justify-center gap-2">
+        <i class="fa-regular fa-copy"></i> Copy
+      </button>
+      <button class="flex-1 border-2 border-gray-300 rounded-lg h-10 bg-[#00a63e] text-white flex items-center justify-center gap-2">
+        <i class="fa-solid fa-phone"></i> Call
+      </button>
+    </div>
+  </div>
+
+  <!-- Card 3 -->
+  <div class="border-2 border-gray-200 bg-white p-6 rounded-xl shadow-sm flex flex-col">
+    <div class="flex justify-between items-center">
+      <div class="w-14 h-14 sm:w-16 sm:h-16 bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
+        <img src="./assets/fire-service.png" class="w-8 h-8 sm:w-10 sm:h-10" alt="">
+      </div>
+      <i class="fa-regular fa-heart"></i>
+    </div>
+    <h1 class="font-bold text-xl sm:text-2xl mt-4">Fire Service Number</h1>
+    <p class="text-[#5c5c5c] text-sm sm:text-base">Fire Service</p>
+    <h1 class="text-2xl sm:text-3xl font-bold mt-4 mb-2">999</h1>
+    <button class="bg-[#f2f2f2] w-14 h-9 rounded-3xl text-xs mt-2">Fire</button>
+    <div class="flex gap-3 mt-4">
+      <button class="flex-1 border-2 border-gray-300 rounded-lg h-10 text-[#5c5c5c] flex items-center justify-center gap-2">
+        <i class="fa-regular fa-copy"></i> Copy
+      </button>
+      <button class="flex-1 border-2 border-gray-300 rounded-lg h-10 bg-[#00a63e] text-white flex items-center justify-center gap-2">
+        <i class="fa-solid fa-phone"></i> Call
+      </button>
+    </div>
+  </div>
+
+  <!-- Card 4 -->
+  <div class="border-2 border-gray-200 bg-white p-6 rounded-xl shadow-sm flex flex-col">
+    <div class="flex justify-between items-center">
+      <div class="w-14 h-14 sm:w-16 sm:h-16 bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
+        <img src="./assets/ambulance.png" class="w-8 h-8 sm:w-10 sm:h-10" alt="">
+      </div>
+      <i class="fa-regular fa-heart"></i>
+    </div>
+    <h1 class="font-bold text-xl sm:text-2xl mt-4">Ambulance Service</h1>
+    <p class="text-[#5c5c5c] text-sm sm:text-base">Ambulance</p>
+    <h1 class="text-2xl sm:text-3xl font-bold mt-4 mb-2">1994-999999</h1>
+    <button class="bg-[#f2f2f2] w-14 h-9 rounded-3xl text-xs mt-2">Health</button>
+    <div class="flex gap-3 mt-4">
+      <button class="flex-1 border-2 border-gray-300 rounded-lg h-10 text-[#5c5c5c] flex items-center justify-center gap-2">
+        <i class="fa-regular fa-copy"></i> Copy
+      </button>
+      <button class="flex-1 border-2 border-gray-300 rounded-lg h-10 bg-[#00a63e] text-white flex items-center justify-center gap-2">
+        <i class="fa-solid fa-phone"></i> Call
+      </button>
+    </div>
+  </div>
+
+  <!-- Card 5 -->
+  <div class="border-2 border-gray-200 bg-white p-6 rounded-xl shadow-sm flex flex-col">
+    <div class="flex justify-between items-center">
+      <div class="w-14 h-14 sm:w-16 sm:h-16 bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
+        <img src="./assets/brac.png" class="w-8 h-8 sm:w-10 sm:h-10" alt="">
+      </div>
+      <i class="fa-regular fa-heart"></i>
+    </div>
+    <h1 class="font-bold text-xl sm:text-2xl mt-4">Women & Child Helpline</h1>
+    <p class="text-[#5c5c5c] text-sm sm:text-base">Women & Child Helpline</p>
+    <h1 class="text-2xl sm:text-3xl font-bold mt-4 mb-2">109</h1>
+    <button class="bg-[#f2f2f2] w-14 h-9 rounded-3xl text-xs mt-2">Help</button>
+    <div class="flex gap-3 mt-4">
+      <button class="flex-1 border-2 border-gray-300 rounded-lg h-10 text-[#5c5c5c] flex items-center justify-center gap-2">
+        <i class="fa-regular fa-copy"></i> Copy
+      </button>
+      <button class="flex-1 border-2 border-gray-300 rounded-lg h-10 bg-[#00a63e] text-white flex items-center justify-center gap-2">
+        <i class="fa-solid fa-phone"></i> Call
+      </button>
+    </div>
+  </div>
+
+  <!-- Card 6 -->
+  <div class="border-2 border-gray-200 bg-white p-6 rounded-xl shadow-sm flex flex-col">
+    <div class="flex justify-between items-center">
+      <div class="w-14 h-14 sm:w-16 sm:h-16 bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
+        <img src="./assets/police.png" class="w-8 h-8 sm:w-10 sm:h-10" alt="">
+      </div>
+      <i class="fa-regular fa-heart"></i>
+    </div>
+    <h1 class="font-bold text-xl sm:text-2xl mt-4">Anti-Corruption Helpline</h1>
+    <p class="text-[#5c5c5c] text-sm sm:text-base">Anti-Corruption</p>
+    <h1 class="text-2xl sm:text-3xl font-bold mt-4 mb-2">106</h1>
+    <button class="bg-[#f2f2f2] w-14 h-9 rounded-3xl text-xs mt-2">Govt.</button>
+    <div class="flex gap-3 mt-4">
+      <button class="flex-1 border-2 border-gray-300 rounded-lg h-10 text-[#5c5c5c] flex items-center justify-center gap-2">
+        <i class="fa-regular fa-copy"></i> Copy
+      </button>
+      <button class="flex-1 border-2 border-gray-300 rounded-lg h-10 bg-[#00a63e] text-white flex items-center justify-center gap-2">
+        <i class="fa-solid fa-phone"></i> Call
+      </button>
+    </div>
+  </div>
+
+  <!-- Card 7 -->
+  <div class="border-2 border-gray-200 bg-white p-6 rounded-xl shadow-sm flex flex-col">
+    <div class="flex justify-between items-center">
+      <div class="w-14 h-14 sm:w-16 sm:h-16 bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
+        <img src="./assets/emergency.png" class="w-8 h-8 sm:w-10 sm:h-10" alt="">
+      </div>
+      <i class="fa-regular fa-heart"></i>
+    </div>
+    <h1 class="font-bold text-xl sm:text-2xl mt-4">Electricity Helpline</h1>
+    <p class="text-[#5c5c5c] text-sm sm:text-base">Electricity Outage</p>
+    <h1 class="text-2xl sm:text-3xl font-bold mt-4 mb-2">16216</h1>
+    <button class="bg-[#f2f2f2] w-16 h-9 rounded-3xl text-xs mt-2">Electricity</button>
+    <div class="flex gap-3 mt-4">
+      <button class="flex-1 border-2 border-gray-300 rounded-lg h-10 text-[#5c5c5c] flex items-center justify-center gap-2">
+        <i class="fa-regular fa-copy"></i> Copy
+      </button>
+      <button class="flex-1 border-2 border-gray-300 rounded-lg h-10 bg-[#00a63e] text-white flex items-center justify-center gap-2">
+        <i class="fa-solid fa-phone"></i> Call
+      </button>
+    </div>
+  </div>
+
+  <!-- Card 8 -->
+  <div class="border-2 border-gray-200 bg-white p-6 rounded-xl shadow-sm flex flex-col">
+    <div class="flex justify-between items-center">
+      <div class="w-14 h-14 sm:w-16 sm:h-16 bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
+        <img src="./assets/brac.png" class="w-8 h-8 sm:w-10 sm:h-10" alt="">
+      </div>
+      <i class="fa-regular fa-heart"></i>
+    </div>
+    <h1 class="font-bold text-xl sm:text-2xl mt-4">Brac Helpline</h1>
+    <p class="text-[#5c5c5c] text-sm sm:text-base">Brac</p>
+    <h1 class="text-2xl sm:text-3xl font-bold mt-4 mb-2">16445</h1>
+    <button class="bg-[#f2f2f2] w-14 h-9 rounded-3xl text-xs mt-2">NGO</button>
+    <div class="flex gap-3 mt-4">
+      <button class="flex-1 border-2 border-gray-300 rounded-lg h-10 text-[#5c5c5c] flex items-center justify-center gap-2">
+        <i class="fa-regular fa-copy"></i> Copy
+      </button>
+      <button class="flex-1 border-2 border-gray-300 rounded-lg h-10 bg-[#00a63e] text-white flex items-center justify-center gap-2">
+        <i class="fa-solid fa-phone"></i> Call
+      </button>
+    </div>
+  </div>
+
+  <!-- Card 9 -->
+  <div class="border-2 border-gray-200 bg-white p-6 rounded-xl shadow-sm flex flex-col">
+    <div class="flex justify-between items-center">
+      <div class="w-14 h-14 sm:w-16 sm:h-16 bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
+        <img src="./assets/Bangladesh-Railway.png" class="w-8 h-8 sm:w-10 sm:h-10" alt="">
+      </div>
+      <i class="fa-regular fa-heart"></i>
+    </div>
+    <h1 class="font-bold text-xl sm:text-2xl mt-4">Bangladesh Railway Helpline</h1>
+    <p class="text-[#5c5c5c] text-sm sm:text-base">Bangladesh Railway</p>
+    <h1 class="text-2xl sm:text-3xl font-bold mt-4 mb-2">163</h1>
+    <button class="bg-[#f2f2f2] w-14 h-9 rounded-3xl text-xs mt-2">Travel</button>
+    <div class="flex gap-3 mt-4">
+      <button class="flex-1 border-2 border-gray-300 rounded-lg h-10 text-[#5c5c5c] flex items-center justify-center gap-2">
+        <i class="fa-regular fa-copy"></i> Copy
+      </button>
+      <button class="flex-1 border-2 border-gray-300 rounded-lg h-10 bg-[#00a63e] text-white flex items-center justify-center gap-2">
+        <i class="fa-solid fa-phone"></i> Call
+      </button>
+    </div>
+  </div>
+</div>
+
+  </section>
+    <!-- <div class="parent_div flex flex-col lg:flex-row gap-6 px-4 sm:px-8 lg:px-16  justify-between bg-[#f5fff6] md:w-full h-full ">
 
         <div class="left_div ml-[60px] sm:ml-0 md:ml-0 mt-[48px] mb-[45px] grid grid-cols-1  sm:grid-cols-2 lg:grid-cols-3 gap-6 flex-1 w-[75%] h-[1140px]">
 
@@ -250,7 +488,7 @@
                 </div>
              
         </div>>
-    </div>
-    
+    </div> -->
+    <script src="style.js"></script>
 </body>
 </html>
